Fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow: auto;
 }
 
 .flexInfo {
